2001-08-08  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: provide feedback when password is wrong. Just
	put up a simple error message

	* util.c (su_run_with_password): pass the return value from
	exec_su
	(exec_su): return -1 if password is wrong.

	* interface.c: cosmetic improvements, put % in the graph
	titles to make explicit that it is the % that is being
	displayed

2001-08-06  Kevin Vandersloot <kfv101@psu.edu>

	* favorites.c: add a little padding around the "remove from
	list" button label.

	* interface.c: add 'end process' and 'kill process' to main menu.
	Put the hidden process manager into the settings menu.

	* callbacks.c (cb_[kill,end]_process): new callbacks for the new
	menuitems.

2001-08-06  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: make disk frame label center align to be
	similar to the graph frame labels.

	* procdialogs.c: Make minimum timeout for proc view be 0.5
	as any lower uses too much cpu on my computer. Make the disk
	timeout mimum be 1 sec and the adjust amount be 1 sec
	intervals in the spin button

2001-08-04  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: new config variables to save window geometry.
	Save the window size on exit.

	* interface.c: set the default size.

	* memmaps.c: remove some debugging stuff and the connecting 
	to the right click signal.

2001-08-03  Kevin Vandersloot <kfv101@psu.edu>

	* load-graph.c: call load_graph_draw on the configure event. This
	removes the slight delay in drawing when switching tabs.

	* callbacks.c (cb_switch_page): remove the calls to load_graph_draw
	here since they did not help and the graph was not visible at that
	point so their effects were not noticable.

	* procman.c: make the default grid color a light green. Hopefully
	people dont' find it too ugly. Please someone provide me with a way
	to make a nice looking graph. I need help here. Pleeeease.

2001-08-03  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: cosmetic improvements to the prefs dialog