@@ -1,5 +1,13 @@
 2001-08-08  Kevin Vandersloot <kfv101@psu.edu>
 
+	* proctable.c:fix memory leaks when calling get_process_name
+	a second time. Also do the utf8 stuff when adding "thread" to the
+	name
+
+	* util.c: fix memory leaks
+
+2001-08-08  Kevin Vandersloot <kfv101@psu.edu>
+
 	* procdialogs.c: provide feedback when password is wrong. Just
 	put up a simple error message
 
